--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = Hazel/vendor/spdlog
 	url = https://github.com/gabime/spdlog
 
+[submodule "Hazel/vendor/GLFW"]
+	path = Hazel/vendor/GLFW
+	url = https://github.com/TheCherno/glfw
