Moved OpenGL shader implementation to OpenGLShader class + added more“

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,13 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-
-
 ViewportPos=1079,102
 ViewportId=0x080FC883
 Size=445,844
 Collapsed=0
-
 
 [Window][Example: Log]
 Pos=0,670
@@ -19,7 +16,6 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][DockSpace Demo]
-
 Size=1464,863
 Collapsed=0
 
@@ -34,9 +30,13 @@ Pos=60,60
 Size=92,48
 Collapsed=0
 
-
+[Window][Settings]
+Pos=60,60
+Size=124,54
+Collapsed=0
 
 [Docking][Data]
 DockSpace   ID=0xFA06BC56 Pos=531,169 Size=1464,844 Split=Y
   DockNode  ID=0x00000003 Parent=0xFA06BC56 SizeRef=1280,506 CentralNode=1
-  DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=1280,193 SelectedTab=0xBF126D42
+  DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=1280,193
+
