Added orthographic camera controller

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,6 +15,12 @@ Size=1017,193
 Collapsed=0
 DockId=0x00000004,0
 
+
+[Window][Settings]
+Pos=974,649
+Size=297,57
+Collapsed=0
+
 [Window][DockSpace Demo]
 Size=1464,863
 Collapsed=0
