Delete the shaders after the shader program creation

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
 #directories
 
-.vs/
-/bin/
+
 bin-int/
 
 #files
 *.user
+
+# Binaries
+**/bin/
+!vendor/bin/premake/
+
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user 
